		main renderer; series using different renderers will all be 
		included in the legend now.
	ChartingPropertyInspector: the ChartGenerator object is available 
		through getGenerator() method
	ChartingPropertyInspector: new constructor allows one to supply the 
		chart generator.  Matching constructors available in subclasses 
		(HistogramChartingPropertyInspector, 
		TimeSeriesChartingPropertyInspector)
	New Schedule, with improved functionality in multithreaded environments.
		This hasn't been tested particularly well and may introduce 
		bugs; please let us know.
	Removed vestigial 'parent' instance variable in PropertyInspector, 
		which wasn't really being used.	
	ChartGenerator: swing makeover to prevent series attributes from spreading
		to cover any vertical space.  Also, added 'up' and 'down' buttons
		in icon form, plus a close box in icon form, to the series
		attributes to enable them to move relative to one another.  Right
		now they're in a suboptimal location: next to the 'show' button.
		Maybe we can move them later.
	Added MethodStep and explained its functionality, and MASON's general
		use of Steppable, in the HowTos
	Slight speed improvements to internal uses of stx/sty/stz where the
		width/height/length is passed in
	Changed Schedule's lock variable to a boolean[1], which is Serializable,
		unlike Object.  Bug fix.  Thanks to Bruno Vandenbossche
		(bruno.vandenbossche@intec.ugent.be) for noting the bug.
	Eliminated Asynchronous interface
	Added CausedRuntimeException for MethodStep
	Schedule.getTimestamp now defines before-simulation times as being
		being less than EPOCH.
	Slight bug fixes to MiniHistogram
	Added new HowTo for hiding the Console, made slight modifications to
		Display2D and Display3D to accommodate this.
	Bug in MutableDouble3D and Double3D's hash value wasn't considering
		x values as part of the hash.
	Added some more distance methods to MutableDouble2D and MutableDouble3D