@@ -1307,3 +1307,8 @@ Version 13
 	Bug in MutableDouble3D and Double3D's hash value wasn't considering
 		x values as part of the hash.
 	Added some more distance methods to MutableDouble2D and MutableDouble3D
+	Changed all JTextFields in the charting facility to PropertyFields.  This
+		is much cleaner and shorter, and works better too.
+	Added an override of Display2D.paintImmediately which prevents the
+		background from always being drawn.  As a result, many 2D
+		simulations run at up to twice their previous visualization speed.
